--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Sender SPA — Direct API with README</title>
+<title>Sender SPA — Direct API</title>
 <style>
   body { font-family: sans-serif; background:#0f172a; color:#e5e7eb; margin:0; }
   header, footer { padding:1rem; text-align:center; }
