--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </style>
 </head>
 <body>
-<header><h1>Slanje poruka direktno na API</h1></header>
+<header><h1>Slanje poruka direktno na API po izboru</h1></header>
 <main>
   <div class="card">
     <label>Broj telefona</label>
