--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Sender SPA — Direct API</title>
+<meta http-equiv="cache-control" content="no-cache">
+<meta http-equiv="pragma" content="no-cache">
+<meta http-equiv="expires" content="0">
 <style>
   body { font-family: sans-serif; background:#0f172a; color:#e5e7eb; margin:0; }
   header, footer { padding:1rem; text-align:center; }
@@ -21,6 +24,16 @@
 </style>
 </head>
 <body>
+<script>
+const SPA_VERSION = "20251125"; // PROMENI na svaki deploy!
+if (localStorage.getItem("spaVersion") !== SPA_VERSION) {
+  localStorage.setItem("spaVersion", SPA_VERSION);
+  if (localStorage.getItem("spaVersionReloaded") !== SPA_VERSION) {
+    localStorage.setItem("spaVersionReloaded", SPA_VERSION);
+    location.reload(true);
+  }
+}
+</script>
 <header><h1>Slanje poruka direktno na API po izboru</h1></header>
 <main>
   <div class="card">
